2009-03-08 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* data/labyrinth.glade
	Fix Gtk warning

2009-02-28 Martin Schaaf <mascha@ma-scha.de>

        * src/MMapArea.py
	Used wrong variable name use height instead of heigth0. Thanks to
	Kunshan Wang for the pointer.

2009-02-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* data/Makefile.am
	Fix issue 132. Thanks again to Romain Tartiere.

2009-02-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/labyrinth.py
	Fix issue 133. Thanks to Romain Tartiere.

2009-02-26 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	Fix issue 135. Thanks to wks1985 for the patch.

2008-09-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix issue 126.

2008-08-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix issue 125.

2008-08-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	Set default size something lower so it works with netbook dimensions.

2008-07-21 Martin Schaaf <mascha@ma-scha.de>

	* src/utils.py
	* src/MainWindow.py
	* src/MMapArea.py
	o fix issue 86 by setting gnome theme default font

2008-07-21 Martin Schaaf <mascha@ma-scha.de>

	* ChangeLog
	o add missing entries

2008-07-16 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	o fix background setting setted to foreground
	o set gdk color as default not the tuple

2008-07-16 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	o set "text" and "base" styles as foreground and backgroundcolor for widgets
	with text like it is described in the documentation

2008-07-16 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	o fix if statement to use correct foreground var

2008-07-15 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	o fix  issue 96  exception if text foreground color isn't set

2008-07-14 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	* src/MainWindow.py
	* src/TextThought.py
	o fix AttributeErrors